--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,5 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots package
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: mvn --batch-mode --update-snapshots package
